tests/samples/valid/PassAchievement.py
# cases where PassAchievement should unlock

# >> CASE
pass

# >> CASE
for _ in range(4):
    pass

# >> CASE
while False:
    pass

# >> CASE
def test():
    pass

# >> CASE
class Test:
    pass
